# git-clone

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: InitFiles.md
initFiles/: config
src/: cat_file.rs  hash_object.rs  index_util.rs  init.rs  ls_tree.rs  main.rs  object_util.rs  objects.rs  update_index.rs  write_tree.rs
