[package]
name = "git_clone"
version = "0.1.0"
authors = ["Evan Turner <evanturner45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.14"

[dependencies.sha1]
version = "0.6.0"
features = ["std"]
